[package]
name = "normal_img"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
egui-wgpu = "0.31.1"
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
rfd = "0.15.3"