[package]
name = "normal_img"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
egui-wgpu = "0.31.1"
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
rfd = "0.15.3"
num_cpus = "1.16.0"
rayon = "1.10.0"

### 画像デコードライブラリ
# png用 Rust PNG
png = "0.17.16"
# jpeg用 libjpeg-turbo
turbojpeg = {version = "1.3", features = ["image"]}
# webp用 libwebp
libwebp = "0.1.2"

